search bar z-index fix

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -80,6 +80,7 @@
 
 .searchBar {
   padding-top: 50px;
+  z-index: 1;
 }
 
 .modal-container {
